--- a/templates/result.html
+++ b/templates/result.html
@@ -127,7 +127,7 @@
                         <div class="col-md-4 text-center mb-3 mb-md-0">
                             <i class="fas fa-brain info-icon"></i>
                             <h6>AI Powered</h6>
-                            <small class="text-muted">Menggunakan teknologi ANN</small>
+                            <small class="text-muted">Menggunakan teknologi Naive Bayes</small>
                         </div>
                         <div class="col-md-4 text-center">
                             <i class="fas fa-lock info-icon"></i>
